--- a/estilos/style.css
+++ b/estilos/style.css
@@ -70,7 +70,7 @@
 figcaption{
     font-family: 'Montserrat Alternates', sans-serif;
     color: rgb(17, 63, 108);
-    font-sirgb(67, 150, 233)
+    font-size: medium;
     font-weight: bold;
     text-align: center;
 }
