--- a/style/base/_resets.scss
+++ b/style/base/_resets.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@700&display=swap');
+
 *{
     margin:0;
     padding: 0;
@@ -5,4 +7,9 @@
 
 html{
     height: 100vh;
+}
+
+.fuente{
+    font-family:'Merienda', cursive;
+    font-size: 50px;
 }
