--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,6 +40,169 @@ html {
   padding-top: 10px;
 }
 
+#grilla {
+  width: 100%;
+  height: 800px;
+  padding-left: 10px;
+}
+
+#grilla {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "frase" "inicio2" "inicio3";
+  -ms-grid-columns: 100%;
+      grid-template-columns: 100%;
+  -ms-grid-rows: 50px 300px 400px;
+      grid-template-rows: 50px 300px 400px;
+  gap: 10px;
+}
+
+.frase {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: frase;
+  font-size: large;
+  text-align: center;
+}
+
+.inicio1 {
+  display: none;
+}
+
+.inicio2 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: inicio2;
+  width: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+  justify-self: center;
+}
+
+.inicio3 {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: inicio3;
+  width: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+  justify-self: center;
+}
+
+@media (min-width: 768px) {
+  #grilla {
+    width: 100%;
+    height: 600px;
+    padding-left: 10px;
+  }
+  #grilla {
+    display: -ms-grid;
+    display: grid;
+        grid-template-areas: "frase frase" "inicio1 inicio3";
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: 50% 50%;
+    -ms-grid-rows: 30% auto;
+        grid-template-rows: 30% auto;
+    gap: 15px;
+  }
+  .frase {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: frase;
+    font-size: large;
+    text-align: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .inicio1 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: inicio1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 300px;
+    display: flex;
+    -ms-flex-item-align: center;
+        align-self: center;
+    justify-self: center;
+  }
+  .inicio2 {
+    display: none;
+  }
+  .inicio3 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+    grid-area: inicio3;
+    width: 300px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-item-align: center;
+        align-self: center;
+    justify-self: center;
+  }
+}
+
+@media (min-width: 1024px) {
+  #grilla {
+    display: -ms-grid;
+    display: grid;
+        grid-template-areas: "frase frase frase" "inicio1 inicio2 inicio3";
+    -ms-grid-columns: 30% 30% 30%;
+        grid-template-columns: 30% 30% 30%;
+    -ms-grid-rows: 20% auto;
+        grid-template-rows: 20% auto;
+    gap: 15px;
+  }
+  .frase {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-area: frase;
+    font-size: xx-large;
+    text-align: center;
+  }
+  .inicio1 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: inicio1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 300px;
+  }
+  .inicio2 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+    grid-area: inicio2;
+    width: 300px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-item-align: center;
+        align-self: center;
+    justify-self: center;
+  }
+  .inicio3 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 3;
+    grid-area: inicio3;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 300px;
+  }
+}
+
 .texto, .video {
   padding-top: 15px;
   padding-bottom: 15px;
