--- a/style/style.scss
+++ b/style/style.scss
@@ -3,6 +3,7 @@
 @import "./layout/header";
 @import "./layout/colores";
 @import "./layout/footer";
+@import "./layout/indexHome";
 @import "./layout/indexQuilling";
 @import "./layout/IndexPortfolio";
 @import "./layout/indexContacto";
