--- a/style/layout/_footer.scss
+++ b/style/layout/_footer.scss
@@ -1,8 +1,13 @@
 .social{
     display: flex;
     font-size: 25px;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
+    gap: 10px;
+    justify-content: space-evenly;
+    align-items:center
     padding-top: 10px;
 }  
+
+.dire{
+    text-decoration: none;
+    font-size: small;
+ }
