--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,10 +36,10 @@ html {
   display: -ms-flexbox;
   display: flex;
   font-size: 25px;
-  gap: 20px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  gap: 10px;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -189,13 +189,13 @@ html {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 300px;
+    width: 400px;
   }
   .inicio2 {
     -ms-grid-row: 2;
     -ms-grid-column: 2;
     grid-area: inicio2;
-    width: 300px;
+    width: 400px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -210,7 +210,7 @@ html {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 300px;
+    width: 400px;
   }
 }
 
