--- a/style/layout/_footer.scss
+++ b/style/layout/_footer.scss
@@ -3,7 +3,7 @@
     font-size: 25px;
     gap: 10px;
     justify-content: space-evenly;
-    align-items:center
+    align-items: center;
     padding-top: 10px;
 }  
 
