--- a/style/base/_resets.scss
+++ b/style/base/_resets.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Merienda:wght@700&family=Smooch&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Marcellus&family=Merienda:wght@700&family=Smooch&display=swap');
 
 *{
     margin:0;
@@ -10,12 +10,7 @@ html{
 }
 
 .fuente{
-    font-family: 'Fredericka the Great', cursive;
-    font-size: x-large;
+    font-family: 'Marcellus', serif;
+    font-size: xx-large;
 }
-/*
-@media (min-width: 768px){
-    .fuente{
-        font-size: 80px;
-    }
-}*/
+
