--- a/style/layout/_footer.scss
+++ b/style/layout/_footer.scss
@@ -1,10 +1,11 @@
 .social{
     display: flex;
     font-size: 25px;
-    gap: 10px;
-    justify-content: space-evenly;
+    gap: 5px;
+    justify-content: center;
     align-items: center;
     padding-top: 10px;
+    gap: 20px;
 }  
 
 .dire{
