--- a/style/layout/_indexQuilling.scss
+++ b/style/layout/_indexQuilling.scss
@@ -1,6 +1,9 @@
-.texto, .video{
+.texto{
     padding-top: 15px;
     padding-bottom: 15px;
     padding-right: 15px;
 }
 
+.video{
+    align-self: center;
+}
