--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,7 +38,7 @@ html {
       -ms-flex-align: center;
           align-items: center;
   padding-top: 10px;
-  gap: 20px;
+  gap: 10px;
 }
 
 .dire {
@@ -48,8 +48,7 @@ html {
 
 #grilla {
   width: 100%;
-  height: 800px;
-  padding-left: 10px;
+  height: 100vh;
 }
 
 #grilla {
@@ -60,7 +59,6 @@ html {
       grid-template-columns: 100%;
   -ms-grid-rows: 50px 300px 400px;
       grid-template-rows: 50px 300px 400px;
-  gap: 10px;
 }
 
 .frase {
@@ -105,7 +103,6 @@ html {
   #grilla {
     width: 100%;
     height: 600px;
-    padding-left: 10px;
   }
   #grilla {
     display: -ms-grid;
@@ -135,8 +132,7 @@ html {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 300px;
-    display: flex;
+    width: 80%;
     -ms-flex-item-align: center;
         align-self: center;
     justify-self: center;
@@ -148,7 +144,7 @@ html {
     -ms-grid-row: 2;
     -ms-grid-column: 2;
     grid-area: inicio3;
-    width: 300px;
+    width: 80%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -163,11 +159,11 @@ html {
     display: -ms-grid;
     display: grid;
         grid-template-areas: "frase frase frase" "inicio1 inicio2 inicio3";
-    -ms-grid-columns: 30% 30% 30%;
-        grid-template-columns: 30% 30% 30%;
+    -ms-grid-columns: 32% 36% 32%;
+        grid-template-columns: 32% 36% 32%;
     -ms-grid-rows: 20% auto;
         grid-template-rows: 20% auto;
-    gap: 15px;
+    gap: 0;
   }
   .frase {
     -ms-grid-row: 1;
@@ -185,12 +181,14 @@ html {
     display: -ms-flexbox;
     display: flex;
     width: 300px;
+    height: auto;
   }
   .inicio2 {
     -ms-grid-row: 2;
     -ms-grid-column: 2;
     grid-area: inicio2;
-    width: 300px;
+    width: 350px;
+    height: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -206,6 +204,7 @@ html {
     display: -ms-flexbox;
     display: flex;
     width: 300px;
+    height: auto;
   }
 }
 
