--- a/estilos/style.css
+++ b/estilos/style.css
@@ -285,6 +285,11 @@ figcaption {
   }
 }
 
+html {
+  width: 100%;
+  height: 100vh;
+}
+
 .formulario {
   padding-left: 30px;
   padding-top: 20px;
