--- a/estilos/style.css
+++ b/estilos/style.css
@@ -294,4 +294,9 @@ html {
   padding-left: 30px;
   padding-top: 20px;
 }
+
+.mini {
+  width: 70px;
+  height: auto;
+}
 /*# sourceMappingURL=style.css.map */
