--- a/estilos/style.css
+++ b/estilos/style.css
@@ -99,6 +99,18 @@ html {
   justify-self: center;
 }
 
+.animacion {
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 2s;
+          transition-duration: 2s;
+}
+
+.animacion:hover {
+  -webkit-transform: rotateX(360deg);
+          transform: rotateX(360deg);
+}
+
 @media (min-width: 768px) {
   #grilla {
     width: 100%;
