--- a/style/layout/_indexContacto.scss
+++ b/style/layout/_indexContacto.scss
@@ -8,6 +8,19 @@ html{
     padding-top: 20px;
 }
 
+.forma{
+    border-radius: 20px;
+    border-color: $color-fuente;
+    width: 65px;
+    height: 25px;
+    background-color: $background-color;
+
+    &:hover{
+        background-color: #ffff;
+
+    }
+}
+
 .mini{
     width: 70px;
     height: auto;
