--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,7 +54,9 @@ html {
 #grilla {
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "frase" "inicio2" "inicio3";
+      grid-template-areas: "frase"
+ "inicio2"
+ "inicio3";
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
   -ms-grid-rows: 50px 300px 400px;
@@ -119,7 +121,8 @@ html {
   #grilla {
     display: -ms-grid;
     display: grid;
-        grid-template-areas: "frase frase" "inicio1 inicio3";
+        grid-template-areas: "frase frase"
+ "inicio1 inicio3";
     -ms-grid-columns: 50% 50%;
         grid-template-columns: 50% 50%;
     -ms-grid-rows: 20% auto;
@@ -170,7 +173,8 @@ html {
   #grilla {
     display: -ms-grid;
     display: grid;
-        grid-template-areas: "frase frase frase" "inicio1 inicio2 inicio3";
+        grid-template-areas: "frase frase frase"
+ "inicio1 inicio2 inicio3";
     -ms-grid-columns: 32% 36% 32%;
         grid-template-columns: 32% 36% 32%;
     -ms-grid-rows: 20% auto;
